--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birthday lucky?</title>
+    <link rel="stylesheet" href="./styles.css">
+    <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Is your birthday lucky?</h1>
+    <label for>Date of birth : </label>
+    <input type="date" id="dobInput" />
+    <label for>Lucky number : </label>
+    <input type="number" id="luckyNoInput" min="1"/>
+    <button id="checkBtn">Check</button>
+    <p class="message"></p>
 </body>
 </html>
