--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <h1>Is your birthday lucky?</h1>
-    <label for>Date of birth : </label>
-    <input type="date" id="dobInput" />
-    <label for>Lucky number : </label>
-    <input type="number" id="luckyNoInput" min="1"/>
-    <button id="checkBtn">Check</button>
-    <p class="message"></p>
+    <h1 class="heading">Is your birthday lucky?</h1>
+    <div class="container">
+        <label for="dobInput">Date of birth : </label>
+        <input type="date" id="dobInput" />
+        <label for="luckyNoInput">Lucky number : </label>
+        <input type="number" id="luckyNoInput" min="1" placeholder="Enter your lucky number."/>
+        <button id="checkBtn">Check</button>
+        <p class="message"></p>
+        <div class="footer">
+            <p>We don't collect your data.</p>
+        </div>
+    </div>
+    
 </body>
 </html>
